clear a bunch of stream api warnings